kanban.css
html, body{
	margin: 0;
	padding: 0;
	border: 0;
	background-repeat: no-repeat;
	background-color: #D3D3D3;
	
	overflow:hidden;
	height: 100%;
	width: 100%;

	/*
	background: #666c70;
	background: -moz-linear-gradient(top, #666c70 1%, #555b60 98px, #d3d3d3 99px, #dbdbdb 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#666c70), color-stop(98px,#555b60), color-stop(99px,#d3d3d3), color-stop(100%,#dbdbdb));
	background: -webkit-linear-gradient(top, #666c70 1%,#555b60 98px,#d3d3d3 99px,#dbdbdb 100%);
	background: -o-linear-gradient(top, #666c70 1%,#555b60 98px,#d3d3d3 99px,#dbdbdb 100%);
	background: -ms-linear-gradient(top, #666c70 1%,#555b60 98px,#d3d3d3 99px,#dbdbdb 100%);
	background: linear-gradient(to bottom, #666c70 1%,#555b60 98px,#d3d3d3 99px,#dbdbdb 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666c70', endColorstr='#dbdbdb',GradientType=0 );
	*/
}


body{
	display: none;
}
.subproject {
	margin-left: 20px;
}

.lightboximage {
	max-width: calc(100% - 100px);
	height: auto;
}

/* boostrap addons */
.dropdown-submenu{position:relative;}
.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
.dropdown-submenu:hover>.dropdown-menu{display:block;}
.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
.dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}

#add-story-form  {
}


#edit-story-form {
}

.tab-content {
	padding-top: 10px;
}

#edit-story-title {
	text-overflow:ellipsis;
	-o-text-overflow: ellipsis;
	-ms-text-overflow: ellipsis;
}

#add-description {
	width: 100%;
	height: 200px;
}
.attachmentname {
	padding-left: 20px;
}

.newfileattach {
	padding: 5px;
	margin-bottom: 5px;
	border: 1px solid #454545;
	border-radius: 3px;
	background-color: #eeeeee;
}

.attachmentdeletebutton {
	padding-right: 20px;
}

#edit-story-new-attach-save-button{
	margin-bottom: 5px !important;
}


#edit-story-new-note-save-button{
	width:100% !important;
	margin-bottom: 5px !important;
}

#edit-story-tasks-container {
	height: calc(100% - 70px) !important;
	background-color: #dedede;
	padding: 2px !important;
	overflow: auto;
}

#edit-story-new-task-save-button{
	width:100% !important;
	margin-bottom: 5px !important;
}

hr.noteHorizonalRule {
	margin: 1px;
	color: #000;
}

div.fill:nth-child(1) {
	height: 100% !important;
}

div.notecontainer {
	padding:5px !important;
	margin: 2px !important;
}

#edit-story-new-note-save-button {
	display:inline-block;
}

#edit-description, #edit-reproduce {
	width: 100%;
	height: 200px;
}

#edit-newnotetext {
	display: inline-block;
}

.realcontentcontainer{
	z-index:50;
	position: absolute;
	top: 0px;
	width: 100%;
	height: 100%;
}
.loadingdiv{
 	position:absolute; 
 	top: 6px;
 	right:6px;"	
}
.loadingdiv img{
}
.loadingdiv span{
	position:absolute;
	left: -50px;
	margin-bottom: 10px;
}
.filterlistcontainer {
	display: inline;
	height: 85px;
}
.otherbuttoncontainer {
	vertical-align: middle;
	display: inline;
	height: 85px;
}
.projectlist{
	display: inline;
	margin-top: 10px;
}
.projectarea{
	vertical-align: top;
	padding-top: 0px;
	padding-left: 10px;
	display:none;
	/*color: #FFFFFF;*/
	font-size: 14px;
	text-wrap: none;
	min-width: 600px;
}

#selected-project-name {
	color: #FFFFFF !important;
	display: inline-block;
	margin-top: 5px !important;
	margin-bottom: 3px;

	font-size: 1.75em;
	font-weight: bold;
}

.mantislogo{
	

	
}

.editing-content {
	height: calc(100% - 135px) !important;
}

.tab-content {
	height: calc(100% - 45px) !important;
}

#tabs-3 {
	height: calc(100% - 20px) !important;
}

#tabs-4 {
	height: calc(100% - 50px) !important;
}


.editing-header {
	background-color: #454545;
	color:#FFFFFF;
	border-radius: 5px;
	padding: 10px 6px 10px 6px;
	text-align: center;
}

.editing-buttons {
	padding: 15px 0px 15px 0px;
	width: 100%;
	display: table;
}

.editing-footer {
	background-color:#CDCDCD;

}

.mantislogo.loggedin {
	width: 210px;
	margin-left: 30px;
	display:inline;
	vertical-align: top;
	padding-top:2px;
}

.loginarea{
	display: inline-block;
	vertical-align: bottom;
	margin-bottom: 10px;
	padding-top: 10px;
	padding-left: 10px;
	color: #FFFFFF;
	font-size: 20px;
	/*background-color: #EFEFEF;*/
}
.loginarea input{
	height: 30px;
	font-size: 15px;
	width: 120px;
	border-radius: 5px 5px 5px 5px;
}


.newnotesavebutton, .kanbannewstory{
	cursor: pointer;
	display: inline-block;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	color: #ffffff;
	padding: 10px 20px;
	-moz-border-radius: 6px;
	-webkit-border-radius: 6px;
	border-radius: 6px;
	background: -moz-linear-gradient(
	top,
	#ff2819 0%,
	#ab0000);
	background: -webkit-gradient(
	linear, left top, left bottom,
	from(#ff2819),
	to(#ab0000));
	border: 1px solid #7d0000;
	text-shadow:
	0px -1px 0px rgba(000,000,000,0.4),
	0px 1px 0px rgba(255,255,255,0.3);
}
/* ... */

